[misc] Updated config file

--- a/config/MOTD_Config.ini
+++ b/config/MOTD_Config.ini
@@ -1,7 +1,8 @@
 [KFGui.KFMOTD]
-# This is where the HTML News page is hosted at. To create your own page, you need to go here
-# https://pastebin.com/YZar5TAb And follow the exact format. No JS Scripts or others, just use HTML structure like that
-# Then page ID (from your address bar) in place of only 'YZar5TAb'
+# The GET Rest API Call for your HTML, from the host
+# Use https://reqbin.com/ for ease of generation
 getRequest="GET /raw/YZar5TAb HTTP/1.1"
 # This will show at the top of the panel like this 'News Source: TRIPWIRE INTERACTIVE'
 newsSource="TRIPWIRE INTERACTIVE"
+# Host of your HTML block
+newsIPAddr="pastebin.com"
