[major] Initial refactoring commit

--- a/config/MOTD_Config.ini
+++ b/config/MOTD_Config.ini
@@ -1,8 +1,8 @@
-[KFGui.KFMOTD]
+[KFGui.Custom_MOTD]
 # The GET Rest API Call for your HTML, from the host
 # Use https://reqbin.com/ for ease of generation
-getRequest="GET /raw/YZar5TAb HTTP/1.1"
+getRequest=GET /raw/YZar5TAb HTTP/1.1
 # This will show at the top of the panel like this 'News Source: TRIPWIRE INTERACTIVE'
-newsSource="TRIPWIRE INTERACTIVE"
+newsSource=TRIPWIRE INTERACTIVE
 # Host of your HTML block
-newsIPAddr="pastebin.com"
+newsIPAddr=pastebin.com
